Bug 1236640 - Make selection change part of the IME change transaction; r=esawin We notify IME text changes in transactions. We should make selection change notification part of that transaction.